Fix grid on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,15 @@ a:hover {
     margin-bottom: 15px;
     color: var(--secondary);
 }
+
+@media (max-width: 700px) {
+    .skill-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 450px) {
+    .skill-grid {
+        grid-template-columns: 1fr;
+    }
+}
